# MS2025-Glossify-BE-Server

./: .gitignore  README.md  cosmos_terms.py  create_explainer_agent.py  create_explainer_agent_2.py  foundry_agent.json  glossify_agent.py  listen_ws.py  main.py  ner_core.py  pyproject.toml  requirements.txt  send_stt_test.py  send_stt_test_long.py  server.py  term_viewer.py
